--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             list-style-position: inside;
         }
 
+        #additional-skills-list li {
+            margin-left: 0.1em;
+        }
+
         h1, h2, h3, h4, h5, h6 {
             margin-top: 1.5em;
             margin-bottom: 0.25em;
