--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
         <ul>
             <li>2005–present</li>
             <li>wore many hats: developer, architect, team leader, partner, director</li>
-            <li>worked with teams to design, build, and maintain sophisticated software platforms:</li>
-            <li>a Web/SOA insurance platform covering all key aspects of policy origination and management</li>
-            <li>a Web-based search engine and reference platform for engineers</li>
-            <li>an API at the center of a new news distribution platform for Reuters</li>
+            <li>worked with teams to design, build, and maintain sophisticated software platforms, including:
+                <ul>
+                    <li>a Web/SOA insurance platform covering all key aspects of policy origination and management</li>
+                    <li>a Web-based search engine and reference platform for engineers</li>
+                    <li>an API at the center of a new news distribution platform for Reuters</li>
+                </ul>
+            </li>
             <li>helped manage the business as a partner</li>
             <li>managed client relationships</li>
             <li>started practice of regular company-wide code review</li>
@@ -108,6 +111,7 @@
 <section>
     <h2 id="around-the-web">Around the Web</h2>
     <ul>
+        <li><a href="http://aviflax.com">Blog</a></li>
         <li><a href="https://github.com/aviflax">GitHub</a></li>
         <li><a href="http://pinboard.in/u:aviflax">Pinboard</a></li>
         <li><a href="http://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
@@ -119,14 +123,16 @@
 <section id="additional-skills">
     <h2>Additional Skills</h2>
     <ul id="additional-skills-list">
-        <li>business analysis</li>
+        <li>Behavior Driven Development</li>
+        <li>Browser APIs</li>
+        <li>Business analysis</li>
         <li>Clojure</li>
         <li>CoffeeScript</li>
         <li>CouchDB</li>
         <li>DB Design</li>
         <li>ElasticSearch</li>
         <li>Groovy</li>
-        <li>information architecture</li>
+        <li>Information architecture</li>
         <li>Java</li>
         <li>JavaScript</li>
         <li>Markdown</li>
