Added telephone number

--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
             margin-top: 1.5em;
             margin-bottom: 0.25em;
         }
+
+        #contact {
+          list-style-type: none;
+          padding-left: 0;
+        }
+
+        #contact a {
+          text-decoration: none;
+        }
     </style>
 </head>
 <body>
 
 <h1 id="avi-flax">Avi Flax</h1>
-<a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a>
+<ul id="contact">
+  <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+  <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+</ul>
 
 <section>
     <h2 id="objective">Objective</h2>
