--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
 
 <h1 id="avi-flax">Avi Flax</h1>
 <ul id="contact">
-  <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
-  <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+    <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+    <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
 </ul>
 
 <section>
     <h2 id="objective">Objective</h2>
     <p>My objective is a position where I can exercise my skills, build something great that makes a difference in the world, grow personally and professionally, and work with great people.</p>
     <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
+    <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or open to remote work.</p>
 </section>
 
 <section>
