Added SFX to key experience. Also a few minor tweaks.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
+    <!-- Thanks for checking out my HTML and CSS skillz! Clearly you should totally hire me. What are you waiting for? avi@aviflax.com -->
     <title>Avi Flax » Résumé</title>
     <style>
         @font-face {
@@ -67,12 +68,12 @@
 <section>
     <h2 id="key-skills">Key Skills</h2>
     <ul>
-        <li>software architecture</li>
-        <li>software construction</li>
-        <li>a deep &amp; broad understanding of the World Wide Web</li>
+        <li>Software architecture</li>
+        <li>Software construction</li>
+        <li>A deep &amp; broad understanding of the World Wide Web</li>
         <li>RESTful Web API/service design &amp; development</li>
-        <li>product design</li>
-        <li>team/organizational leadership</li>
+        <li>Product design</li>
+        <li>Team/organizational leadership</li>
     </ul>
 </section>
 
@@ -80,20 +81,23 @@
     <h2 id="key-experience">Key Experience</h2>
 
     <section>
-        <h3 id="arc90">Arc90</h3>
+        <h3 id="arc90">Arc90 → SFX Entertainment</h3>
         <ul>
             <li>2005–present</li>
-            <li>wore many hats: developer, architect, team leader, partner, director</li>
-            <li>worked with teams to design, build, and maintain sophisticated software platforms, including:
+            <li>Arc90 was a Web application design &amp; development consultancy. It was acquired in November 2013 by SFX, at which time I was made CTO of SFX.</li>
+            <li>Wore many hats: developer, architect, team leader, partner, director, CTO</li>
+            <li>Worked with teams to design, build, and maintain sophisticated software platforms, including:
                 <ul>
-                    <li>a Web/SOA insurance platform covering all key aspects of policy origination and management</li>
-                    <li>a Web-based search engine and reference platform for engineers</li>
-                    <li>an API at the heart of a new-from-the-ground-up news distribution platform for Reuters</li>
+                    <li>A Web/SOA insurance platform covering all key aspects of policy origination and management</li>
+                    <li>A Web-based search engine and reference platform for engineers</li>
+                    <li>An API at the heart of a new-from-the-ground-up news distribution platform for Reuters</li>
+                    <li>An ambitious new-from-the-ground-up music platform for SFX</li>
                 </ul>
             </li>
-            <li>helped manage the business as a partner</li>
-            <li>managed client relationships</li>
-            <li>started practice of regular company-wide code review</li>
+            <li>Helped manage the (consulting) business as a partner</li>
+            <li>Managed client relationships</li>
+            <li>Invested much time and effort in recruiting and retaining exceptional team members</li>
+            <li>Started practice of regular company-wide code review</li>
         </ul>
     </section>
 
@@ -101,7 +105,7 @@
         <h3 id="adp">ADP</h3>
         <ul>
             <li>2001–2004</li>
-            <li>refactored, enhanced, and maintained a sophisticated application for producing custom financial documents for on-demand printing</li>
+            <li>Refactored, enhanced, and maintained a sophisticated application for producing custom financial documents for on-demand printing</li>
         </ul>
     </section>
 </section
@@ -129,8 +133,8 @@
     <p>I’d be happy provide more examples of my work, such as architecture diagrams and presentations, business analysis, code, etc.</p>
 </section>
 
-<section>
-    <h2 id="around-the-web">Around the Web</h2>
+<section id="around-the-web">
+    <h2>Around the Web</h2>
     <ul>
         <li><a href="http://aviflax.com">Blog</a></li>
         <li><a href="https://github.com/aviflax">GitHub</a></li>
@@ -165,20 +169,20 @@
         <li>UX design</li>
         <li>XML/XSL/XSD/XQuery</li>
     </ul>
-</section>    
+</section>
 
 <section>
     <h2>Hobbies</h2>
     <ul>
-        <li><a href="http://www.flickr.com/photos/avi4now/7819823912/lightbox/">auto racing (autox)</a></li>
-        <li>cycling</li>
-        <li>hiking</li>
-        <li><a href="http://www.goodreads.com/user/show/2772290-avi-flax">reading</a></li>
+        <li><a href="http://www.flickr.com/photos/avi4now/7819823912/lightbox/">Auto racing (autox)</a></li>
+        <li>Cycling</li>
+        <li>Hiking</li>
+        <li><a href="http://www.goodreads.com/user/show/2772290-avi-flax">Reading</a></li>
     </ul>
 </section>
 
 <footer>
-  <p>Last updated on Thursday, 23 May 2013</p>
+  <p>Last updated on Saturday, 26 April 2014</p>
 </footer>
 
 </body>
