Added side projects and current SFX project

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h2 id="objective">Objective</h2>
     <p>My objective is a position where I can exercise my skills, build something great that makes a difference in the world, grow personally and professionally, and work with great people.</p>
     <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
-    <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or open to remote work.</p>
+    <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or to telecommute from White Plains.</p>
 </section>
 
 <section>
@@ -84,7 +84,7 @@
         <h3 id="arc90">Arc90 → SFX Entertainment</h3>
         <ul>
             <li>2005–present</li>
-            <li>Arc90 was a Web application design &amp; development consultancy. It was acquired in November 2013 by SFX, at which time I was made CTO of SFX.</li>
+            <li>Arc90 was a Web application design &amp; development consultancy. It was acquired in 2013 by SFX.</li>
             <li>Wore many hats: developer, architect, team leader, partner, director, CTO</li>
             <li>Worked with teams to design, build, and maintain sophisticated software platforms, including:
                 <ul>
@@ -113,7 +113,10 @@
 <section>
     <h2 id="examples">Examples</h2>
     <ul>
-        <li>My most recent major project was to build a new platform for reuters.com:
+        <li>My current side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. If you check it out, please keep in mind that it’s only half-built, and I’m new to Ruby!</li>
+        <li>My prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
+        <li>My current SFX project is to design, build, and ship an ambitious new music platform. Since this platform has not yet launched, I can’t share any of the work at this time.</li>
+        <li>My prior major project for Arc90 was to build a new platform for reuters.com:
             <ul>
                 <li>I created <a href="platform-architecture.png">a diagram</a> of the overall architecture of the “Reuters Next” platform</li>
                 <li>I was asked to review a draft of the API spec; I provided <a href="https://gist.github.com/20df21ec725c05a2a199">these notes</a></li>
@@ -182,7 +185,7 @@
 </section>
 
 <footer>
-  <p>Last updated on Saturday, 26 April 2014</p>
+  <p>Last updated on Wednesday, 30 July 2014</p>
 </footer>
 
 </body>
