--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <ul>
         <li>My current side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. If you check it out, please keep in mind that it’s only half-built, and I’m new to Ruby!</li>
         <li>My prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
+        <li>Last year I published <a href="https://github.com/aviflax/resourceful">Resourceful</a>, a Clojure library that provides a more concise and more RESTful alternative to declaring routes.</li>
         <li>My current SFX project is to design, build, and ship an ambitious new music platform. Since this platform has not yet launched, I can’t share any of the work at this time.</li>
         <li>My prior major project for Arc90 was to build a new platform for reuters.com:
             <ul>
