--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         <li>Node</li>
         <li>OmniGraffle</li>
         <li>Python</li>
+        <li>Ruby</li>
         <li>SQL</li>
         <li>UX design</li>
         <li>XML/XSL/XSD/XQuery</li>
