--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 </ul>
 
 <section>
-    <h2 id="objective">Objective</h2>
-    <p>My objective is a position where I can exercise my skills, build something great that makes a difference in the world, grow personally and professionally, and work with great people.</p>
+    <h2 id="objective">Objectives</h2>
+    <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
+    <p>I want to exercise my skills, grow personally and professionally, and work with great people in a company that’s functional and healthy.</p>
     <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
     <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or to telecommute from White Plains.</p>
 </section>
