Skills tweak to be a little more concise

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 <section>
     <h2 id="key-skills">Key Skills</h2>
     <ul>
-        <li>Software architecture</li>
-        <li>Software construction</li>
+        <li>Software design, architecture, and construction</li>
         <li>A deep &amp; broad understanding of the World Wide Web</li>
         <li>RESTful Web API/service design &amp; development</li>
         <li>Product design</li>
