Make the footer smaller.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         #contact a {
           text-decoration: none;
         }
+
+        footer {
+          font-size: small;
+        }
     </style>
 </head>
 <body>
