--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             margin-bottom: 0.25em;
         }
 
+        header h2 {
+            margin-top: 0.5em;
+        }
+
         #contact {
           list-style-type: none;
           padding-left: 0;
@@ -52,20 +56,27 @@
         footer {
           font-size: small;
         }
+
+        #experience > section > ul {
+            margin-top: 0.5em;
+        }
     </style>
 </head>
 <body>
 
-<h1 id="avi-flax">Avi Flax</h1>
-<ul id="contact">
-    <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
-    <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
-</ul>
+<header>
+    <h1 id="avi-flax">Avi Flax</h1>
+    <h2>Software Architect &amp; Web Developer</h2>
+    <ul id="contact">
+        <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+    </ul>
+</header>
 
 <section>
     <h2 id="objective">Objectives</h2>
     <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
-    <p>I want to exercise my skills, grow personally and professionally, and work with great people in a company that’s functional and healthy.</p>
+    <p>I want to exercise my skills, grow personally and professionally, and work with great people in a mission-oriented company that’s functional and healthy.</p>
     <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
     <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or to telecommute from White Plains.</p>
 </section>
@@ -81,47 +92,92 @@
     </ul>
 </section>
 
-<section>
-    <h2 id="key-experience">Key Experience</h2>
+<section id="experience">
+    <h2>Experience</h2>
 
-    <section>
-        <h3 id="arc90">Arc90 → SFX Entertainment</h3>
+    <section id="sfx">
+      <h3>2013–2014: SFX Entertainment</h3>
+      <ul>
+        <li>SFX acquired Arc90 in 2013 to be its internal app design and development group</li>
+        <li>I initially adopted the title CTO; later I recruited someone to take on ~half of my role, ceded <em>CTO</em> to him, and adopted <em>Chief Sofware Architect</em></li>
+        <li>I helped design and build an ambitious new-from-the-ground-up streaming music platform and integrate it with existing products</li>
+        <li>I helped shape the organization by helping craft its structure, practices, culture, goals, communication, and approach</li>
+        <li>I recruited some key personnel</li>
+      </ul>
+    </section>
+
+    <section id="arc90">
+        <h3>2005–2013: Arc90</h3>
         <ul>
-            <li>2005–present</li>
-            <li>Arc90 was a Web application design &amp; development consultancy. It was acquired in 2013 by SFX.</li>
-            <li>Wore many hats: developer, architect, team leader, partner, director, CTO</li>
+            <li>Arc90 was a Web application design &amp; development consultancy; it was acquired by SFX Entertainment in 2013</li>
+            <li>Wore many hats: developer, architect, team leader, partner, director</li>
             <li>Worked with teams to design, build, and maintain sophisticated software platforms, including:
                 <ul>
                     <li>A Web/SOA insurance platform covering all key aspects of policy origination and management</li>
                     <li>A Web-based search engine and reference platform for engineers</li>
                     <li>An API at the heart of a new-from-the-ground-up news distribution platform for Reuters</li>
-                    <li>An ambitious new-from-the-ground-up music platform for SFX</li>
                 </ul>
             </li>
-            <li>Helped manage the (consulting) business as a partner</li>
+            <li>Conducted technical audits of clients’ acquisition targets</li>
+            <li>Helped manage the business as a partner</li>
             <li>Managed client relationships</li>
             <li>Invested much time and effort in recruiting and retaining exceptional team members</li>
             <li>Started practice of regular company-wide code review</li>
         </ul>
     </section>
 
-    <section>
-        <h3 id="adp">ADP</h3>
+    <section id="adp">
+        <h3>2001–2004: ADP</h3>
         <ul>
-            <li>2001–2004</li>
             <li>Refactored, enhanced, and maintained a sophisticated application for producing custom financial documents for on-demand printing</li>
         </ul>
     </section>
-</section
 
-<section>
-    <h2 id="examples">Examples</h2>
+    <section id="register.com">
+        <h3>2001: Register.com</h3>
+        <ul>
+            <li>Team lead position for large high-traffic auction site</li>
+            <li>Responsibilities included designing, implementing, and maintaining features; and reengineering site technology and architecture
+            <li>Created new internal tools and development procedures</li>
+        </ul>
+    </section>
+
+    <section id="rewardsplus">
+        <h3>2000: RewardsPlus</h3>
+        <ul>
+            <li>Maintained and enhanced a large-scale online employee benefits enrollment system for diverse clients with diverse needs</li>
+        </ul>
+    </section>
+
+    <section id="wip">
+        <h3>1998–2000: Words In Progress</h3>
+        <ul>
+            <li>Developed requirements and specifications for high traffic websites directly with clients; crafted application architecture and database design</li>
+        </ul>
+    </section>
+
+    <section id="ics">
+        <h3>1998: Ideal Computer Strategies</h3>
+        <ul>
+            <li>Worked with teams of designers, coders, and project managers to concurrently develop and deploy client websites with basic dynamic features</li>
+        </ul>
+    </section>
+
+    <section id="pcc">
+        <h3>1997–1998: PCC Internet Design</h3>
+        <ul>
+            <li>Founded and managed a small web design shop in Pikesville, MD providing full-service web design and development to small companies in the Baltimore area</li>
+        </ul>
+    </section>
+</section>
+
+<section id="examples">
+    <h2>Examples</h2>
     <ul>
         <li>My current side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. If you check it out, please keep in mind that it’s only half-built, and I’m new to Ruby!</li>
         <li>My prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
         <li>Last year I published <a href="https://github.com/aviflax/resourceful">Resourceful</a>, a Clojure library that provides a more concise and more RESTful alternative to declaring routes.</li>
-        <li>My current SFX project is to design, build, and ship an ambitious new music platform. Since this platform has not yet launched, I can’t share any of the work at this time.</li>
-        <li>My prior major project for Arc90 was to build a new platform for reuters.com:
+        <li>My last major project for Arc90 was to build a new platform for reuters.com:
             <ul>
                 <li>I created <a href="platform-architecture.png">a diagram</a> of the overall architecture of the “Reuters Next” platform</li>
                 <li>I was asked to review a draft of the API spec; I provided <a href="https://gist.github.com/20df21ec725c05a2a199">these notes</a></li>
@@ -191,7 +247,7 @@
 </section>
 
 <footer>
-  <p>Last updated on Thursday, 28 August 2014</p>
+  <p>Last updated on 16 September 2014</p>
 </footer>
 
 </body>
