Added some more skills

--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
         <li>CoffeeScript</li>
         <li>CouchDB</li>
         <li>DB Design</li>
+        <li>Django</li>
         <li>ElasticSearch</li>
+        <li>Flask</li>
         <li>Groovy</li>
         <li>Information architecture</li>
         <li>Java</li>
@@ -229,8 +231,10 @@
         <li>Node</li>
         <li>OmniGraffle</li>
         <li>Python</li>
+        <li>Restlet</li>
         <li>Ruby</li>
         <li>SQL</li>
+        <li>Solr</li>
         <li>UX design</li>
         <li>XML/XSL/XSD/XQuery</li>
     </ul>
@@ -247,7 +251,7 @@
 </section>
 
 <footer>
-  <p>Last updated on 16 September 2014</p>
+  <p>Last updated on 17 September 2014</p>
 </footer>
 
 </body>
