Hell yes I wanna work from home!

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
     <p>I want to exercise my skills, grow personally and professionally, and work with great people in a mission-oriented company that’s functional and healthy.</p>
     <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
-    <p>I live in <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a> and I prefer a position located within roughly an hour’s commute (Manhattan works, Brooklyn’s out) or to telecommute from White Plains.</p>
+    <p>I’d prefer to work from home but I’m open to an on-site position within roughly a one-hour commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
 </section>
 
 <section>
