Added a link to schedule a chat and a Thanks section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,20 @@
           padding-left: 0;
         }
 
+        #contact li {
+            display: inline;
+            margin-right: 1em;
+        }
+
+        #contact li:after {
+            margin-left: 1em;
+            content: "»"
+        }
+
+        #contact li:last-child:after {
+            content: ""
+        }
+
         #contact a {
           text-decoration: none;
         }
@@ -70,6 +84,7 @@
     <ul id="contact">
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+        <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
     </ul>
 </header>
 
@@ -250,8 +265,18 @@
     </ul>
 </section>
 
+<section>
+    <h2>Thanks!</h2>
+    <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
+    <ul>
+        <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+        <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
+    </ul>
+</section>
+
 <footer>
-  <p>Last updated on 17 September 2014</p>
+  <p>Last updated on 31 December 2014</p>
 </footer>
 
 </body>
