--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 <section>
     <h2 id="objective">Objectives</h2>
     <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
-    <p>I want to exercise my skills, grow personally and professionally, and work with great people in a mission-oriented company that’s functional and healthy.</p>
-    <p>I’m happy to join a team or lead a team, but I want to be doing design and development, not management.</p>
-    <p>I’d prefer to work from home but I’m open to an on-site position within roughly a one-hour commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
+    <p>I want to exercise my skills, grow personally and professionally, and collaborate with great people in a mission-oriented company that’s functional and healthy.</p>
+    <p>I’m open to a leadership role in which I’d be hands-on with design and development and I’d be supported in empowering people.</p>
+    <p>I prefer to work from home but I’m open to an on-site position within roughly a 90-minute commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
 </section>
 
 <section>
@@ -276,7 +276,7 @@
 </section>
 
 <footer>
-  <p>Last updated on 31 December 2014</p>
+  <p>Last updated on 8 January 2015</p>
 </footer>
 
 </body>
