I’m a Web Developer first and foremost!

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <header>
     <h1 id="avi-flax">Avi Flax</h1>
-    <h2>Software Architect &amp; Web Developer</h2>
+    <h2>Web Developer &amp; Software Architect</h2>
     <ul id="contact">
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
