--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <header>
     <h1 id="avi-flax">Avi Flax</h1>
-    <h2>Web Developer &amp; Software Architect</h2>
+    <h2>Software Designer/Developer/Generalist</h2>
     <ul id="contact">
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
@@ -99,16 +99,49 @@
 <section>
     <h2 id="key-skills">Key Skills</h2>
     <ul>
-        <li>Software design, architecture, and construction</li>
+        <li>Problem analysis</li>
+        <li>Software design, architecture, construction, deployment, and operation</li>
         <li>A deep &amp; broad understanding of the World Wide Web</li>
         <li>RESTful Web API/service design &amp; development</li>
         <li>Product design</li>
+        <li>Data engineering</li>
         <li>Team/organizational leadership</li>
     </ul>
+    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
+</section>
+
+<section>
+    <h2 id="key-skills">Key Technologies</h2>
+    <ul>
+        <li>Clojure</li>
+        <li>DynamoDB</li>
+        <li>Go</li>
+        <li>Java</li>
+        <li>Kinesis</li>
+        <li>Python</li>
+    </ul>
+    <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
 </section>
 
 <section id="experience">
     <h2>Experience</h2>
+
+    <section id="timehop">
+        <h3>2015: Timehop</h3>
+        <ul>
+            <li>Refactored a critical, complex, tangled subsystem into a loosely-coupled stream-based system using Kinesis and Go. (<a href="https://speakerdeck.com/aviflax/stream-data-processing-with-kinesis-and-go-at-timehop">slides</a>)</li>
+            <li>Designed and implemented sophisticated integration with Twilio for SMS-based signup</li>
+            <li>Designed and implemented a large-scale data processing tool to process billions of records very quickly.</li>
+        </ul>
+    </section>
+
+    <section id="thinkful">
+        <h3>2014: Thinkful</h3>
+        <ul>
+            <li>Designed and implemented a sophisticated system to automate Stripe subscription management, loosely-coupled with student lifecycle
+                changes occurring in the monolith via events reified as <a href="http://www.iron.io/worker/">IronWorker</a> tasks.</li>
+        </ul>
+    </section>
 
     <section id="sfx">
       <h3>2013–2014: SFX Entertainment</h3>
@@ -117,7 +150,7 @@
         <li>I initially adopted the title CTO; later I recruited someone to take on ~half of my role, ceded <em>CTO</em> to him, and adopted <em>Chief Sofware Architect</em></li>
         <li>I helped design and build an ambitious new-from-the-ground-up streaming music platform and integrate it with existing products</li>
         <li>I helped shape the organization by helping craft its structure, practices, culture, goals, communication, and approach</li>
-        <li>I recruited some key personnel</li>
+        <li>I recruited key personnel</li>
       </ul>
     </section>
 
@@ -227,29 +260,30 @@
 <section id="additional-skills">
     <h2>Additional Skills</h2>
     <ul id="additional-skills-list">
+        <li>AWS (Amazon Web Services)</li>
         <li>Behavior Driven Development</li>
         <li>Browser APIs</li>
         <li>Business analysis</li>
-        <li>Clojure</li>
         <li>CoffeeScript</li>
         <li>CouchDB</li>
+        <li>Datomic</li>
         <li>DB Design</li>
         <li>Django</li>
         <li>ElasticSearch</li>
         <li>Flask</li>
         <li>Groovy</li>
         <li>Information architecture</li>
-        <li>Java</li>
         <li>JavaScript</li>
         <li>Markdown</li>
         <li>MongoDB</li>
         <li>Node</li>
         <li>OmniGraffle</li>
-        <li>Python</li>
+        <li>PostgreSQL</li>
         <li>Restlet</li>
         <li>Ruby</li>
         <li>SQL</li>
         <li>Solr</li>
+        <li>Stripe</li>
         <li>UX design</li>
         <li>XML/XSL/XSD/XQuery</li>
     </ul>
@@ -276,7 +310,7 @@
 </section>
 
 <footer>
-  <p>Last updated on 8 January 2015</p>
+  <p>Last updated on 8 September 2015</p>
 </footer>
 
 </body>
