--- a/index.html
+++ b/index.html
@@ -222,9 +222,10 @@
 <section id="examples">
     <h2>Examples</h2>
     <ul>
-        <li>My current side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. If you check it out, please keep in mind that it’s only half-built, and I’m new to Ruby!</li>
-        <li>My prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
-        <li>Last year I published <a href="https://github.com/aviflax/resourceful">Resourceful</a>, a Clojure library that provides a more concise and more RESTful alternative to declaring routes.</li>
+        <li>My current side project is <a href="https://github.com/aviflax/">Omnia</a>, a system to search multiple document silos at once. Warning: under construction!</li>
+        <li>A prior side project is <a href="https://github.com/aviflax/github-digests">GitHub Digests</a>, a system to aggregate GitHub notifications into daily email digests. (If you check it out, please keep in mind that it’s only half-built, and I’m new to Ruby!)</li>
+        <li>Another prior side project was <a href="http://3things.aviflax.com/">Three Things</a>; I published <a href="http://aviflax.com/post/two-practices-three-things/">a post</a> telling its story.</li>
+        <li>In 2013 I published <a href="https://github.com/aviflax/resourceful">Resourceful</a>, a Clojure library that provides a more concise and more RESTful alternative to declaring routes.</li>
         <li>My last major project for Arc90 was to build a new platform for reuters.com:
             <ul>
                 <li>I created <a href="platform-architecture.png">a diagram</a> of the overall architecture of the “Reuters Next” platform</li>
@@ -242,7 +243,7 @@
           </ul>
         </li>
     </ul>
-    <p>I’d be happy provide more examples of my work, such as architecture diagrams and presentations, business analysis, code, etc.</p>
+    <p>I’d be happy provide more examples of my work, such as architecture diagrams and presentations, business analysis, code, etc. Just <a href="#contact">get in touch!</a></p>
 </section>
 
 <section id="around-the-web">
