--- a/index.html
+++ b/index.html
@@ -88,16 +88,16 @@
     </ul>
 </header>
 
-<section>
-    <h2 id="objective">Objectives</h2>
+<section id="objective">
+    <h2>Objectives</h2>
     <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
     <p>I want to exercise my skills, grow personally and professionally, and collaborate with great people in a mission-oriented company that’s functional and healthy.</p>
     <p>I’m open to a leadership role in which I’d be hands-on with design and development and I’d be supported in empowering people.</p>
     <p>I prefer to work from home but I’m open to an on-site position within roughly a 90-minute commute from <a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a>.</p>
 </section>
 
-<section>
-    <h2 id="key-skills">Key Skills</h2>
+<section id="key-skills">
+    <h2>Key Skills</h2>
     <ul>
         <li>Problem analysis</li>
         <li>Software design, architecture, construction, deployment, and operation</li>
@@ -110,8 +110,8 @@
     <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
 </section>
 
-<section>
-    <h2 id="key-skills">Key Technologies</h2>
+<section id="key-technologies">
+    <h2>Key Technologies</h2>
     <ul>
         <li>Clojure</li>
         <li>DynamoDB</li>
@@ -290,7 +290,7 @@
     </ul>
 </section>
 
-<section>
+<section id="hobbies">
     <h2>Hobbies</h2>
     <ul>
         <li><a href="http://www.flickr.com/photos/avi4now/7819823912/lightbox/">Auto racing (autox)</a></li>
@@ -300,7 +300,7 @@
     </ul>
 </section>
 
-<section>
+<section id="thanks">
     <h2>Thanks!</h2>
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul>
