Update PDF version

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <li><a href="http://pinboard.in/u:aviflax">Pinboard</a></li>
         <li><a href="http://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
         <li><a href="http://www.readability.com/aviflax/favorites">Readability</a></li>
-        <li><a href="https://twitter.com/avi4now">Twitter</a></li>
+        <li><a href="https://twitter.com/giant_niggler">Twitter</a></li>
     </ul>
 </section>
 
