Update with current status

--- a/index.html
+++ b/index.html
@@ -80,15 +80,23 @@
 
 <header>
     <h1 id="avi-flax">Avi Flax</h1>
-    <h2>Software Designer/Developer/Generalist</h2>
+    <h2>Software Developer/Architect</h2>
     <ul id="contact">
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
-        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
-        <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
+        <!--
+          Hidden for now because I’m not actively looking for work.
+          <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+          <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
+        -->
     </ul>
 </header>
 
-<section id="objective">
+<section id="current-status">
+  <h2>Current Status</h2>
+  <p>I’m not actively looking for a position, but I’m always open to interesting opportunities that align with <a href="#objectives">my objectives</a>.</p>
+</section>
+
+<section id="objectives">
     <h2>Objectives</h2>
     <p>I want to design and build systems that solve real problems and make a positive difference in the world.</p>
     <p>I want to exercise my skills, grow personally and professionally, and collaborate with great people in a mission-oriented company that’s functional and healthy.</p>
@@ -125,6 +133,13 @@
 
 <section id="experience">
     <h2>Experience</h2>
+
+    <section id="park-assist">
+        <h3>2016–present: <a href="http://parkassist.com/">Park Assist</a></h3>
+        <ul>
+            <li>Serving as principle software architect, helping to design and build the next generation of the Park Assist platform.</li>
+        </ul>
+    </section>
 
     <section id="timehop">
         <h3>2015: Timehop</h3>
@@ -305,13 +320,16 @@
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul>
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+        <!--
+          Hidden for now because I’m not actively looking for work.
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
         <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
+        -->
     </ul>
 </section>
 
 <footer>
-  <p>Last updated on 8 September 2015</p>
+  <p>Last updated on 4 January 2017.</p>
 </footer>
 
 </body>
