Update “Key Technologies”

--- a/index.html
+++ b/index.html
@@ -121,12 +121,17 @@
 <section id="key-technologies">
     <h2>Key Technologies</h2>
     <ul>
-        <li>Clojure</li>
-        <li>DynamoDB</li>
-        <li>Go</li>
-        <li>Java</li>
-        <li>Kinesis</li>
-        <li>Python</li>
+        <li><a href="https://aws.amazon.com/">Amazon Web Services (AWS)</a></li>
+        <li><a href="https://clojure.org/">Clojure</a></li>
+        <li><a href="https://aws.amazon.com/dynamodb/">DynamoDB</a></li>
+        <li><a href="https://golang.org/">Go</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a></li>
+        <li><a href="https://kafka.apache.org/">Kafka</a></li>
+        <li><a href="https://aws.amazon.com/kinesis/">Kinesis</a></li>
+        <li><a href="https://aws.amazon.com/lambda/">Lambda (AWS)</a></li>
+        <li><a href="https://www.python.org/">Python</a></li>
+        <li><a href="https://www.ruby-lang.org/">Ruby</a></li>
+        <li><a href="https://www.terraform.io/">Terraform</a></li>
     </ul>
     <p>See also <a href="#additional-skills">Additional Skills</a> below.</p>
 </section>
