Tweaks to “Additional Skills”

--- a/index.html
+++ b/index.html
@@ -281,13 +281,12 @@
 <section id="additional-skills">
     <h2>Additional Skills</h2>
     <ul id="additional-skills-list">
-        <li>AWS (Amazon Web Services)</li>
         <li>Behavior Driven Development</li>
         <li>Browser APIs</li>
         <li>Business analysis</li>
-        <li>CoffeeScript</li>
-        <li>CouchDB</li>
-        <li>Datomic</li>
+        <li><a href="http://coffeescript.org">CoffeeScript</a></li>
+        <li><a href="https://couchdb.apache.org">CouchDB</a></li>
+        <li><a href="http://www.datomic.com">Datomic</a></li>
         <li>DB Design</li>
         <li>Django</li>
         <li>ElasticSearch</li>
@@ -301,7 +300,6 @@
         <li>OmniGraffle</li>
         <li>PostgreSQL</li>
         <li>Restlet</li>
-        <li>Ruby</li>
         <li>SQL</li>
         <li>Solr</li>
         <li>Stripe</li>
