Font and style updates

--- a/index.html
+++ b/index.html
@@ -6,19 +6,38 @@
     <title>Avi Flax » Résumé</title>
     <style>
         @font-face {
-            font-family: "Sorts Mill Goudy";
-            src: url(GoudyStM-webfont.woff);
+            font-family: "Charter";
+            src: url(fonts/charter/charter_regular.woff);
+        }
+
+        @font-face {
+            font-family: "Charter";
+            src: url(fonts/charter/charter_bold.woff);
+            font-weight: bold;
+        }
+
+        @font-face {
+            font-family: "Charter";
+            src: url(fonts/charter/charter_italic.woff);
+            font-style: italic;
+        }
+
+        @font-face {
+            font-family: "Charter";
+            src: url(fonts/charter/charter_bold_italic.woff);
+            font-weight: bold;
+            font-style: italic;
         }
 
         html, body {
-            font-family: "Sorts Mill Goudy", "Palatino", "comic sans";
+            font-family: "Charter", "Palatino", "Helvetica Neue", "Helvetica";
             font-size: 16pt;
-            line-height: 150%;
         }
 
         body {
-            width: 700px;
             margin: 0 auto;
+            padding-left: 10%;
+            padding-right: 10%;
         }
 
         #additional-skills-list {
@@ -36,8 +55,8 @@
         }
 
         h1, h2, h3, h4, h5, h6 {
-            margin-top: 1.5em;
-            margin-bottom: 0.25em;
+            margin-top: 1.25em;
+            margin-bottom: 0.5em;
         }
 
         header h2 {
