Restore phone number, add location to contact

--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
     <h1 id="avi-flax">Avi Flax</h1>
     <h2>Software Developer/Architect</h2>
     <ul id="contact">
-        <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+        <li><a href="mailto:avi@aviflax.com">avi@aviflax.com</a></li>
+        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a></li>
         <!--
           Hidden for now because I’m not actively looking for work.
-          <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
           <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
         -->
     </ul>
@@ -342,9 +343,10 @@
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
     <ul>
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
+        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a></li>
         <!--
           Hidden for now because I’m not actively looking for work.
-        <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
         <li><a href="https://calendly.com/aviflax">schedule a chat</a></li>
         -->
     </ul>
