Rework+update “Around the Web”

--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
 <section id="around-the-web">
     <h2>Around the Web</h2>
     <ul>
-        <li><a href="http://aviflax.com">Blog</a></li>
-        <li><a href="https://github.com/aviflax">GitHub</a></li>
-        <li><a href="http://pinboard.in/u:aviflax">Pinboard</a></li>
-        <li><a href="http://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
-        <li><a href="http://www.readability.com/aviflax/favorites">Readability</a></li>
+        <li><a href="http://aviflax.com/">Blog</a></li>
         <li><a href="https://twitter.com/flaximus_prime">Twitter</a></li>
+        <li><a href="https://pinboard.in/u:aviflax">Bookmarks</a></li>
+        <li><a href="https://www.instapaper.com/p/avi">Instapaper</a></li>
+        <li><a href="https://stackoverflow.com/users/7012/avi-flax">Stack Overflow</a></li>
+        <li><a href="https://github.com/aviflax">GitHub</a></li>
     </ul>
 </section>
 
