--- a/index.html
+++ b/index.html
@@ -63,26 +63,19 @@
             margin-top: 0.5em;
         }
 
-        #contact {
+        .contact {
+          margin: 1.5em 0 0 0;
           list-style-type: none;
-          padding-left: 0;
+          line-height: 150%;
+          padding: 0;
         }
 
-        #contact li {
-            display: inline;
-            margin-right: 1em;
+        #thanks .contact {
+          margin: 1em 0;
+          padding: 0;
         }
 
-        #contact li:after {
-            margin-left: 1em;
-            content: "»"
-        }
-
-        #contact li:last-child:after {
-            content: ""
-        }
-
-        #contact a {
+        .contact a {
           text-decoration: none;
         }
 
@@ -100,7 +93,7 @@
 <header>
     <h1 id="avi-flax">Avi Flax</h1>
     <h2>Software Developer/Architect</h2>
-    <ul id="contact">
+    <ul id="contact" class="contact">
         <li><a href="mailto:avi@aviflax.com">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
         <li><a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a></li>
@@ -343,7 +336,7 @@
 <section id="thanks">
     <h2>Thanks!</h2>
     <p>Thanks for scrolling all the way to the bottom of my résumé! I appreciate your interest. At this point, you might want to get in touch. Please do!</p>
-    <ul>
+    <ul class="contact">
         <li><a href="mailto:avi@aviflax.com?subject=Job%20Offer">avi@aviflax.com</a></li>
         <li><a id="tel" href="tel:+1-347-426-7814">+1-347-426-7814</a></li>
         <li><a href="https://en.wikipedia.org/wiki/White_Plains,_New_York">White Plains, New York</a></li>
