Simplify SFX copy

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <h3>2013–2014: SFX Entertainment</h3>
       <ul>
         <li>SFX acquired Arc90 in 2013 to be its internal app design and development group</li>
-        <li>I initially adopted the title CTO; later I recruited someone to take on ~half of my role, ceded <em>CTO</em> to him, and adopted <em>Chief Sofware Architect</em></li>
+        <li>I initially adopted the title CTO, then recruited someone to replace me so I could shift to <i>Chief Sofware Architect</i></li>
         <li>I helped design and build an ambitious new-from-the-ground-up streaming music platform and integrate it with existing products</li>
         <li>I helped shape the organization by helping craft its structure, practices, culture, goals, communication, and approach</li>
         <li>I recruited key personnel</li>
